--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,6 +42,26 @@
 
             />
 
+        <TextView
+            android:id="@+id/hasil1"
+            android:layout_below="@id/buttonSimpan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Hasil 1"
+
+            />
+
+        <TextView
+            android:id="@+id/hasil2"
+            android:layout_below="@id/hasil1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Hasil 2"
+
+            />
+
 
 
     </RelativeLayout>
