--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:hint="Input Angka 1"
             android:layout_centerHorizontal="true"
+            android:inputType="phone"
 
             />
 
@@ -27,6 +28,7 @@
             android:layout_height="wrap_content"
             android:hint="Input Angka 2"
             android:layout_centerHorizontal="true"
+            android:inputType="phone"
 
             />
 
@@ -43,22 +45,12 @@
             />
 
         <TextView
-            android:id="@+id/hasil1"
+            android:id="@+id/hasil"
             android:layout_below="@id/buttonSimpan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Hasil 1"
-
-            />
-
-        <TextView
-            android:id="@+id/hasil2"
-            android:layout_below="@id/hasil1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Hasil 2"
+            android:text="Hasil"
 
             />
 
