--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,24 +33,45 @@
             />
 
         <Button
-            android:id="@+id/buttonSimpan"
+            android:id="@+id/buttonHitung"
             android:layout_below="@id/inputAngka2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Simpan"
+            android:layout_marginLeft="110dp"
+            android:text="Hitung"
             android:textAllCaps="false"
+
+
+            />
+        <Button
+            android:id="@+id/buttonReset"
+            android:layout_toRightOf="@id/buttonHitung"
+            android:layout_below="@id/inputAngka2"
+            android:layout_marginLeft="20dp"
+            android:text="Reset"
+            android:textAllCaps="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
 
             />
 
         <TextView
             android:id="@+id/hasil"
-            android:layout_below="@id/buttonSimpan"
+            android:layout_below="@id/buttonHitung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="Hasil"
+
+            />
+        <TextView
+            android:id="@+id/kondisi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hasil"
+            android:layout_centerHorizontal="true"
+            android:text="Kondisi Alert"
 
             />
 
