--- a/app/src/main/res/layout/activity_kalkulator_bmi.xml
+++ b/app/src/main/res/layout/activity_kalkulator_bmi.xml
@@ -53,12 +53,14 @@
             android:textColor="@color/black"
             android:layout_centerVertical="true"
             />
+
         <EditText
             android:id="@+id/inputUmur"
-            android:layout_toRightOf="@id/textUmur"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/textUmur"
             android:hint="Masukkan Umur"
+            android:inputType="phone"
 
             />
         <TextView
@@ -98,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/textTinggiBadan"
             android:hint="Masukkan Tinggi"
+            android:inputType="phone"
 
             />
         <TextView
@@ -137,6 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/textBeratBadan"
             android:hint="Masukkan Berat"
+            android:inputType="phone"
 
             />
         <TextView
