--- a/app/src/main/res/layout/activity_kalkulator_bmi.xml
+++ b/app/src/main/res/layout/activity_kalkulator_bmi.xml
@@ -201,6 +201,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
+            android:text="HASIL : "
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
